--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ android {
             targetCompatibility 1.8
         }
     }
+    android {
+        dataBinding {
+            enabled = true
+        }
+    }
 }
 
 dependencies {
