--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BoaViagem">
-        <activity android:name=".FragmentMenu"></activity>
+        <activity android:name=".MenuActivity"></activity>
+        <activity android:name=".FragmentMenu" />
         <activity android:name=".NovoGasto" />
         <activity android:name=".NovaViagem" />
         <activity android:name=".HomeActivity" />
