--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BoaViagem">
-        <activity android:name=".MenuActivity"></activity>
+        <activity android:name=".view.MenuActivity"></activity>
         <activity android:name=".FragmentMenu" />
-        <activity android:name=".NovoGasto" />
-        <activity android:name=".NovaViagem" />
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".view.NovoGasto" />
+        <activity android:name=".view.NovaViagem" />
+        <activity android:name=".view.HomeActivity" />
+        <activity android:name=".view.RegisterActivity" />
+        <activity android:name=".view.LoginActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
